<resources>
    <string name="app_name">LocationFinder</string>
    <string name="search_location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="add">Add</string>
    <string name="longitude">Longitude</string>
    <string name="delete">delete</string>
    <string name="view_all">View All</string>
    <string name="search">Search</string>
    <string name="update">update</string>
</resources>